# sdl-playground

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindSDL2.cmake
inc/: Engine.h
src/: Engine.cpp
